--- a/src/app/components/gastos/dialog-gasto/dialog-gasto.component.html
+++ b/src/app/components/gastos/dialog-gasto/dialog-gasto.component.html
@@ -57,3 +57,5 @@
         <p-button type="button" (click)="cerrarDialog(form)" icon="pi pi-times" label="Cancelar" styleClass="p-button-secondary"></p-button>
     </p-footer>
 </p-dialog>
+
+<p-toast></p-toast>
