--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,7 @@
                 <div class="label-menu">
                     <label for="btn-menu"><i class="pi pi-bars icon-menu"></i></label>
                 </div>
+
             </div>
             <input type="checkbox" id="btn-menu">
             <div class="container-menu">
@@ -57,6 +58,12 @@
                             </li>
 
                             <li class="nav-item" routerLinkActive="active">
+                                <a class="nav-link" routerLink="productos">
+                                    <i class="pi pi-list icon-nav"></i>Productos
+                                </a>
+                            </li>
+
+                            <li class="nav-item" routerLinkActive="active">
                                 <a class="nav-link" routerLink="almacen">
                                     <i class="pi pi-home icon-nav"></i>Almacén
                                 </a>
@@ -73,9 +80,9 @@
                                     <i class="far fa-building icon-nav"></i>Empresa
                                 </a>
                             </li>
+
                         </ul>
                     </nav>
-
                 </div>
             </div>
 
