--- a/src/app/components/empleados/empleados.component.css
+++ b/src/app/components/empleados/empleados.component.css
@@ -13,7 +13,6 @@
     text-transform: uppercase;
     margin-top: 0px;
     margin-left: 15px;
-    padding-top: 10px;
 }
 
 .btn-emple {
@@ -21,18 +20,13 @@
     height: 30px;
     margin-left: 15px;
     font-size: 13px;
+    color: #ffffff;
     text-transform: uppercase;
 }
 
 .icono-btn {
     font-size: 13px;
     margin-right: 6px;
-}
-
-.table-header input {
-    height: 35px;
-    width: 200px;
-    display: flex;
 }
 
 
@@ -47,13 +41,14 @@
 }
 
 .imput-buscar {
-    height: 35px;
+    height: 30px;
     padding-left: 10px;
 }
 
 .boton-buscar {
     width: 70px;
-    height: 35px;
+    height: 30px;
+    color: #ffffff;
 }
 
  ::placeholder {
@@ -76,12 +71,12 @@
 }
 
 .icono-table {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     margin-right: 16px;
     text-align: center;
-    line-height: 30px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 18px;
     border-radius: 3px;
     cursor: pointer;
 }
@@ -187,7 +182,6 @@
         text-transform: uppercase;
         margin-top: 0px;
         margin-left: 15px;
-        padding-top: 10px;
         font-size: 16px;
     }
     .formulario .div-form .form {
