--- a/src/app/components/empresa/empresa.component.css
+++ b/src/app/components/empresa/empresa.component.css
@@ -6,7 +6,30 @@
 
 .titulo-prin {
     text-transform: uppercase;
-    margin: 10px 20px;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+
+.contenedor-dos {
+    margin-top: -10px;
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+.btn-empresa {
+    width: 170px;
+    height: 30px;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+
+.icono-btn {
+    font-size: 13px;
+    margin-right: 6px;
+}
+
+p-toast {
+    z-index: 1;
 }
 
 
@@ -28,20 +51,145 @@ img {
 
 /* estilos tabla */
 
-.table-service {
-    margin-top: 20px;
-    margin-left: 20px;
+.card {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    margin-bottom: 10px;
 }
 
 .icono-table {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
+    margin-right: 16px;
     text-align: center;
-    line-height: 30px;
-    margin-right: 10px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 18px;
     border-radius: 3px;
+    cursor: pointer;
+}
+
+.identificador {
+    width: 70px;
+}
+
+.td-iconos {
+    align-items: left;
+    justify-content: space-between;
 }
 
 
 /* fin estilos tabla */
+
+@media screen and (max-width: 800px) and (min-width:180px) {
+    .div-boton {
+        margin-left: 15px;
+    }
+    .card {
+        border-left: 0;
+        border-right: 0;
+        border-top: 0;
+    }
+    img {
+        display: flex;
+    }
+    p-table {
+        width: 100%;
+        font-size: .9em;
+    }
+    p-table tr {
+        display: flex;
+        flex-direction: column;
+        border-bottom: 1px solid grey;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    p-table td[data-titulo] {
+        display: flex;
+    }
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
+        width: 100px;
+        color: silver;
+        font-weight: bold;
+    }
+    p-table .header {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 400px) and (min-width:250px) {
+    img {
+        width: 250px;
+        height: 200px;
+        margin-left: 20px;
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 310px) and (min-width:200px) {
+    .titulo-prin {
+        text-transform: uppercase;
+        margin-top: 15px;
+        margin-left: 15px;
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 370px) and (min-width:180px) {
+    p-table {
+        font-size: .8em;
+    }
+    p-table tr td {
+        flex-direction: column;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    p-table td[data-titulo] {
+        display: flex;
+        font-size: .8em;
+    }
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
+        width: 100px;
+        color: silver;
+        font-weight: bold;
+    }
+    p-table .header {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 270px) and (min-width:180px) {
+    img {
+        width: 200px;
+        height: 150px;
+        margin-left: 20px;
+        margin-bottom: 10px;
+    }
+    .table-header input {
+        width: 170px;
+    }
+    .table-header {
+        margin-left: -15px;
+    }
+    .titulo-prin {
+        text-transform: uppercase;
+        margin-top: 0px;
+        margin-left: 15px;
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 225px) and (min-width:180px) {
+    img {
+        width: 170px;
+        height: 150px;
+        margin-left: 20px;
+        margin-bottom: 10px;
+    }
+}
