--- a/src/app/components/extintor/extintor.component.css
+++ b/src/app/components/extintor/extintor.component.css
@@ -8,22 +8,30 @@
     text-transform: uppercase;
     margin-top: 0px;
     margin-left: 15px;
-    padding-top: 10px;
+}
+
+.contenedor1 {
+    margin-top: -10px;
+}
+
+.contenedor2 {
+    margin-top: 38px;
 }
 
 .btn-extintor {
-    width: 170px;
-    height: 35px;
+    width: 150px;
+    height: 30px;
     margin-left: 15px;
+    color: #ffffff;
     font-size: 13px;
     text-transform: uppercase;
 }
 
 .btn-extintor-t {
-    width: 170px;
-    height: 35px;
+    width: 150px;
+    height: 30px;
     margin-left: 15px;
-    margin-top: 58px;
+    color: #ffffff;
     font-size: 13px;
     text-transform: uppercase;
 }
@@ -62,12 +70,12 @@
 }
 
 .icono-table {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     margin-right: 16px;
     text-align: center;
-    line-height: 30px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 18px;
     border-radius: 3px;
 }
 
