--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,7 +5,7 @@
 }
 
 .footer {
-    background-color: #0573d3;
+    background-color: #01579b;
     width: 100%;
     position: relative;
     height: 45px;
@@ -17,7 +17,7 @@
     margin-bottom: 0px;
     margin-left: 5px;
     font-size: 12px;
-    color: rgb(255, 255, 255);
+    color: #ffffff;
 }
 
 .p2 {
