--- a/src/app/components/gastos/dialog-gasto/dialog-gasto.component.css
+++ b/src/app/components/gastos/dialog-gasto/dialog-gasto.component.css
@@ -1,3 +1,12 @@
 .input-error {
     border-color: red;
 }
+
+p-button {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+p-toast {
+    z-index: 1;
+}
