--- a/src/app/components/gastos/gastos.component.css
+++ b/src/app/components/gastos/gastos.component.css
@@ -8,7 +8,6 @@
     text-transform: uppercase;
     margin-top: 0px;
     margin-left: 15px;
-    padding-top: 10px;
 }
 
 .contenedor-dos {
@@ -18,7 +17,7 @@
 
 .btn-gasto {
     width: 150px;
-    height: 35px;
+    height: 30px;
     margin-left: 15px;
     font-size: 13px;
     text-transform: uppercase;
@@ -27,12 +26,6 @@
 .icono-btn {
     font-size: 12px;
     margin-right: 6px;
-}
-
-.table-header input {
-    height: 35px;
-    width: 200px;
-    display: flex;
 }
 
 ::placeholder {
@@ -85,12 +78,12 @@ p-toast {
 }
 
 .icono-table {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     margin-right: 16px;
     text-align: center;
-    line-height: 30px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 18px;
     border-radius: 3px;
 }
 
@@ -116,13 +109,13 @@ p-toast {
 }
 
 .imput-buscar {
-    height: 35px;
+    height: 30px;
     padding-left: 10px;
 }
 
 .boton-buscar {
     width: 70px;
-    height: 35px;
+    height: 30px;
 }
 
 ::placeholder {
@@ -137,6 +130,11 @@ p-toast {
     .div-boton {
         margin-left: 15px;
     }
+    .card {
+        border-left: 0;
+        border-right: 0;
+        border-top: 0;
+    }
     p-table {
         width: 100%;
         font-size: .9em;
@@ -144,7 +142,7 @@ p-toast {
     p-table tr {
         display: flex;
         flex-direction: column;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 1em;
         margin-bottom: 1em;
     }
@@ -170,7 +168,39 @@ p-toast {
     p-table tr {
         display: flex;
         flex-direction: column;
-        border: 1px solid grey;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    p-table td[data-titulo] {
+        display: flex;
+        font-size: .9em;
+    }
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
+        width: 100px;
+        color: silver;
+        font-size: .8em;
+        font-weight: bold;
+    }
+    p-table .header {
+        display: none;
+    }
+    p-toast {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 350px) and (min-width:180px) {
+    .formulario .div-form .form {
+        width: 200px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    p-table {
+        font-size: .8em;
+    }
+    p-table tr td {
+        flex-direction: column;
         padding: 1em;
         margin-bottom: 1em;
     }
@@ -182,22 +212,15 @@ p-toast {
         content: attr( data-titulo);
         width: 100px;
         color: silver;
-        font-size: .7em;
         font-weight: bold;
     }
     p-table .header {
         display: none;
     }
-    p-toast {
-        display: none;
-    }
 }
 
-@media screen and (max-width: 270px) and (min-width:180px) {
-    .table-header input {
-        width: 170px;
-    }
-    .table-header {
-        margin-left: -15px;
+@media screen and (max-width: 300px) and (min-width:180px) {
+    .titulo-prin {
+        font-size: 16px;
     }
 }
