--- a/src/app/components/precios/precios.component.css
+++ b/src/app/components/precios/precios.component.css
@@ -4,16 +4,24 @@
     box-sizing: border-box;
 }
 
+p-toast {
+    z-index: 1;
+}
+
 .titulo-prin {
     text-transform: uppercase;
     margin-top: 0px;
     margin-left: 15px;
-    padding-top: 10px;
+}
+
+.contenedor2 {
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
 .btn-precio {
     width: 150px;
-    height: 35px;
+    height: 30px;
     margin-left: 15px;
     font-size: 13px;
     text-transform: uppercase;
@@ -50,6 +58,32 @@
 /* fin estilos dialogo agregar  */
 
 
+/* estilos buscador */
+
+.abc {
+    margin-right: 15px;
+}
+
+.div-boton {
+    margin-left: 5px;
+}
+
+.imput-buscar {
+    height: 30px;
+    padding-left: 10px;
+}
+
+.boton-buscar {
+    width: 70px;
+    height: 30px;
+}
+
+::placeholder {
+    padding-left: 5px;
+    color: rgb(163, 159, 159);
+}
+
+
 /* estilos tabla */
 
 .card {
@@ -63,12 +97,12 @@
 }
 
 .icono-table {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     margin-right: 16px;
     text-align: center;
-    line-height: 30px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 18px;
     border-radius: 3px;
 }
 
@@ -85,6 +119,12 @@
 /* fin estilos tabla */
 
 @media screen and (max-width: 800px) and (min-width:180px) {
+    .div-boton {
+        margin-left: 15px;
+    }
+}
+
+@media screen and (max-width: 550px) and (min-width:180px) {
     p-table {
         width: 100%;
         font-size: .9em;
@@ -92,7 +132,7 @@
     p-table tr {
         display: flex;
         flex-direction: column;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 1em;
         margin-bottom: 1em;
     }
@@ -118,22 +158,49 @@
     p-table tr {
         display: flex;
         flex-direction: column;
-        border: 1px solid grey;
         padding: 1em;
         margin-bottom: 1em;
     }
     p-table td[data-titulo] {
         display: flex;
-        font-size: .8em;
+        flex-direction: column;
+        font-size: .9em;
     }
     p-table td[data-titulo]::before {
         content: attr( data-titulo);
         width: 100px;
         color: silver;
-        font-size: .7em;
+        font-size: .8em;
         font-weight: bold;
     }
     p-table .header {
         display: none;
+    }
+}
+
+@media screen and (max-width: 270px) and (min-width:180px) {
+    .table-header input {
+        width: 170px;
+    }
+    .table-header {
+        margin-left: -15px;
+    }
+    .titulo-prin {
+        text-transform: uppercase;
+        margin-top: 0px;
+        margin-left: 15px;
+        font-size: 16px;
+    }
+    .formulario .div-form .form {
+        width: 135px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    .formulario .div-form .boton .icono-buscar {
+        color: #c7c7c7;
+        margin-top: 10;
+        transition: .5s;
+        font-size: 15px;
+        cursor: pointer;
     }
 }
