--- a/src/app/components/precios/precios.component.html
+++ b/src/app/components/precios/precios.component.html
@@ -5,68 +5,46 @@
             Lista de precios
         </h2>
     </div>
-    <div class="contenedor">
+    <div class="contenedor2">
         <div class="col-md-12">
             <div class="btn">
-                <button (click)="showPositionDialog('center')" type="button" class="btn btn-primary btn-precio">
+                <button (click)="showPositionDialog(preciosModel)" type="button" class="btn btn-primary btn-precio">
                  <i class="pi pi-dollar icono-btn"></i>Agregar precio</button>
             </div>
-            <app-precio-dialog (verPrecio)="addItem()"></app-precio-dialog>
+            <app-precio-dialog #agregarDialog (verPrecio)="addItem($event)"></app-precio-dialog>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 ml-3 mb-2 abc">
+            <input type="search " placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="buscarDescripcion" (input)="buscarDescripcion = $event.target.value">
+        </div>
+        <div class="col-md-1 div-boton">
+            <button class="btn btn-primary boton-buscar" (click)="buscarPrecio()">Buscar</button>
         </div>
     </div>
     <div class="card">
-        <p-table [(value)]="paises" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+        <p-table [(value)]="precios" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
             <ng-template pTemplate="header">
                 <tr class="header">
                     <th class="identificador"> # </th>
                     <th> Descripción </th>
                     <th> Valor </th>
-                    <th> Iva </th>
-                    <th> Valor total </th>
                     <th></th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let paises>
+            <ng-template pTemplate="body" let-precios>
                 <tr>
-                    <td data-titulo="#"> 1</td>
-                    <td data-titulo="Descripción"> 2</td>
-                    <td data-titulo="Valor"> 3</td>
-                    <td data-titulo="Iva"> 6</td>
-                    <td data-titulo="Valor total"> 7</td>
+                    <td data-titulo="#"> {{ precios.id }} </td>
+                    <td data-titulo="Descripción"> {{ precios.descripcion | titlecase}} </td>
+                    <td data-titulo="Valor"> {{ precios.valor | currency }} </td>
                     <td class="td-iconos">
-                        <i (click)="editarPrecio('center')" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
+                        <i (click)="showPositionDialog(precios)" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                        <i (click)="eliminarPrecios(precios)" class="pi pi-trash btn-outline-danger icono-table"></i>
                     </td>
                 </tr>
             </ng-template>
         </p-table>
     </div>
 
-    <!-- dialogos -->
-
-
-    <p-dialog [(visible)]="editarPrice" [position]="positionEdit" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
-        <ng-template pTemplate="header">
-            <h3 class="titulo-h3">
-                <i class="pi pi-dollar "></i> EDITAR PRECIO
-            </h3>
-        </ng-template>
-        <div class="form">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="descripcion1" class="form-label">Descripción</label>
-                        <input type="text" class="form-control" id="descripcion1">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="valor1" class="form-label">Valor</label>
-                        <input type="text" class="form-control" id="valor1">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <p-footer>
-            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
-        </p-footer>
-    </p-dialog>
+    <p-toast></p-toast>
+    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
