--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -65,7 +65,7 @@
 
                             <li class="nav-item" routerLinkActive="active">
                                 <a class="nav-link" routerLink="almacen">
-                                    <i class="pi pi-home icon-nav"></i>Almacén
+                                    <i class="pi pi-home icon-nav"></i>Inventario
                                 </a>
                             </li>
 
