--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -1,1 +1,55 @@
-<p>productos works!</p>
+<div class="contenedor">
+    <div>
+        <h2 class="titulo-prin">
+            Lista de productos
+        </h2>
+    </div>
+    <div class="contenedor-dos">
+        <div class="col-md-12">
+            <div class="btn">
+                <button (click)="showPositionDialog(productoss)" type="button" class="btn btn-primary btn-emple">
+            <i class="pi pi-plus icono-btn"></i>Agregar producto</button>
+            </div>
+            <app-productos-dialog #productodialogo (verProducto)=" addItem($event)"></app-productos-dialog>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 ml-3 mb-2 abc">
+            <input type="search " placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="busquedaProducto" (input)="busquedaProducto = $event.target.value">
+        </div>
+        <div class="col-md-1 div-boton">
+            <button class="btn btn-primary boton-buscar" (click)="buscarProducto()">Buscar</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <p-table [(value)]="producto" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" [rowHover]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+
+            <ng-template pTemplate="header">
+                <tr class="header">
+                    <th class="identificador"> # </th>
+                    <th> Tipo de producto </th>
+                    <th> Peso x Libras </th>
+                    <th> Tipo extintor </th>
+                    <th></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-producto>
+                <tr>
+                    <td data-titulo="#"> {{ producto.id }} </td>
+                    <td data-titulo="Tipo extintor"> {{ producto.tipoProducto }} </td>
+                    <td data-titulo="Peso extintor"> {{ producto.idPesoExtintor }} </td>
+                    <td data-titulo="Producto"> {{ producto.idTipoExtintor }} </td>
+                    <td class="td-iconos">
+                        <i (click)="showPositionDialog(producto)" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                        <i (click)="eliminarProducto(producto)" class="pi pi-trash btn-outline-danger icono-table"></i>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+
+    <p-toast></p-toast>
+    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+</div>
